feat: added primary logic for streaming the logic to kafka